<resources>
    <string name="app_name">FitSteps</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_here">Register Here</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="gender">Gender</string>
    <string name="submit">Submit</string>
    <string name="endomorph">Endomorph</string>
    <string name="mesomorph">Mesomorph</string>
    <string name="ectomorph">Ectomorph</string>
    <string name="my_body_type">My Body Type</string>
    <string name="height_in_cms">Height(in Cms)</string>
    <string name="weight_in_kgs">Weight(in Kgs)</string>
    <string name="age">Age</string>
    <string name="distance">Distance: 0 Km</string>
    <string name="calories">Calories: 0 Cal</string>
    <string name="steps">Steps: 0 Steps</string>
    <string name="title_activity_maps">Map</string>
    <string name="name">Name</string>
    <string name="achievement">Achievements\n0</string>
    <string name="total_run">Total Activities\n0</string>
    <string name="logo">LOGO</string>
    <string name="data">Data</string>
    <string name="finish">Finish</string>
    <string name="exit">Exit</string>
</resources>
