<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@drawable/steps_back"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/logo"
            android:padding="2dp"
            android:src="@drawable/logo" />

        <TextView
            style="@style/TextAppearance.Compat.Notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/app_name"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/notif_dataTV"
        style="@style/TextAppearance.Compat.Notification.Info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:text="@string/data"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/notifexpanded_btnfinish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="0.5"
            android:background="@drawable/button_gradient"
            android:padding="5dp"
            android:text="@string/finish"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/notifexpanded_btnexit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="0.5"
            android:background="@drawable/button_gradient"
            android:padding="5dp"
            android:text="@string/exit"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</LinearLayout>